--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="registerlogin-project">
+    <wb-module deploy-name="registerlogin">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="registerlogin-project"/>
-        <property name="java-output-path" value="/registerlogin-project/build/classes"/>
+        <property name="java-output-path" value="/registerlogin/build/classes"/>
+        <property name="context-root" value="registerlogin"/>
     </wb-module>
 </project-modules>
